# html-to-markdown

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  RELEASE_PROCESS.md  RUST_CODE_REVIEW.md  Taskfile.yaml  V2_PERFORMANCE_RESULTS.md  build.py  prepare_wheel.py  pyproject.toml
.github/actions/build-wheels/: action.yaml
.github/workflows/: build.yaml  ci.yaml  docker-build.yaml  profiling.yaml  publish.yaml  test-wheels.yaml
Formula/: README.md  html-to-markdown.rb
crates/html-to-markdown/: Cargo.toml
crates/html-to-markdown-cli/: Cargo.toml
crates/html-to-markdown-cli/src/: main.rs
crates/html-to-markdown-py/src/: lib.rs
crates/html-to-markdown/examples/: test_escape.rs  test_inline_formatting.rs
crates/html-to-markdown/src/: converter.rs  hocr.rs  lib.rs  options.rs  text.rs
crates/html-to-markdown/tests/: integration_test.rs  issue_140_regressions.rs
html_to_markdown/: __init__.py  api.py  cli.py  cli_proxy.py  converters.py  options.py  processing.py  v1_compat.py
tests/: benchmark_wikipedia_test.py  cli_test.py  cli_translation_test.py  cli_v1_integration_test.py  conftest.py  elements_test.py  hocr_test.py  integration_test.py  metadata_extraction_test.py  semantic_elements_test.py  svg_math_test.py  task_lists_test.py  v1_compat_test.py
